<Done> insert, classificate todoitem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.BetterBetterQueue"
         tools:targetApi="31">
         <activity
+            android:name=".ui.TodoItem.InsertTodoItemActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
